// TODO base velocity legend
// TODO SPC MESO rescan for _sf
// TODO add other models to new NWS WRF, remove global icon
// TODO optimize model setup in esrl,ncep like nssl

55042 2018_11_13 (bugfix) at joshuatee.wx.settings.Location$Companion.getLatLon (Location.kt:189)
                 java.lang.IndexOutOfBoundsException:
                 lint cleanup
55041 2018_11_12 (bugfix) NSL WRF website was changed completely, add other models
55040 2018_11_12 (bugfix) NSL WRF website was changed completely, fix WRF as a starter
55039 2018_11_07 (bugfix) UtilityLocation.getXYFromAddressOSM was not optimal
55038 2018_11_06 remove uneeded RadarType.kt
                 add new SPC MESO parm: "Bulk Shear - Sfc-3km", "shr3"
                 (bugfix) "Bulk Shear - Sfc-1km" was incorrectly srh1 and not shr1
                 SPC MESO add parm: "925mb Moisture Transport", "925-850mb Moisture Transport", "100mb Mean Mixing Ratio"
                 SPC MESO update label from "Sfc RH, Temp, Wind" to "Sfc RH / Temp / Wind"
                 SPC MESO add parm: "925mb Temp Advection" "tadv_925"
                 add icon ic_touch_app_24dp.xml and use in dashboard and SPC SWO summary, goes16, radar mosaic
55037 2018_11_04 (bugfix) at joshuatee.wx.settings.SettingsLocationAdapterList.deleteItem (SettingsLocationAdapterList.kt:85)
                java.lang.ArrayIndexOutOfBoundsException:
                lint cleanup
55036 2018_11_04 introduce helper methods in myapp to reduce boilerplate and reduce lint warnings related to initial preference processing
                 remove app/build from git tracking with .gitignore (as rerequested for f-droid submission)
                 in res/raw move files that have .bin to have no extension (mainly geographic binary files for radar)
55035 2018_11_02 revert changes to vel color legenc
55034 2018_10_29 (bugfix - thanks Ely ) revert lint suggestion Oct 13 activity_settings_color_palette_editor.xml
                 update kotlin to 1.3.0