@@ -10,6 +10,7 @@
 55042 2018_11_13 (bugfix) at joshuatee.wx.settings.Location$Companion.getLatLon (Location.kt:189)
                  java.lang.IndexOutOfBoundsException:
                  lint cleanup
+                 (bugfix) ncep models - sector did not always show
 55041 2018_11_12 (bugfix) NSL WRF website was changed completely, add other models
 55040 2018_11_12 (bugfix) NSL WRF website was changed completely, fix WRF as a starter
 55039 2018_11_07 (bugfix) UtilityLocation.getXYFromAddressOSM was not optimal
